--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -1,4 +1,4 @@
 # Title
 ## Derek Wang - Digital Humanities 110
 
-As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would be difficult for tech-averse users: Senior Assist and Anvayaa on the iOS App Store. 
+As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would be difficult for tech-averse users: Senior Assist and Anvayaa on the iOS App Store. Improving these apps could mean greater quality of life for our senior citizens, especially during these trying times. 
