--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -9,6 +9,7 @@ This 1-3 scale can be used to rate the severity of usability problems within the
 | Rating | Importance |
 |--------|:----------:|
 | 1      | Little to no issues, issues that arise are cosmetic |
-| 2     = Minor usability problem: fixing this should be given low priority
-| 3   = Major usability problem: important to fix, so should be given high priority
+| 2      | Minor usability problem: fixing this should be given low priority |
+| 3      | Major usability problem: important to fix, so should be given high priority |
+Credit: NNgroup - https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/
 
