--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -1,7 +1,7 @@
-# Title
+# Senior Citizen Assistance Apps to Improve Quality of Life 
 ## Derek Wang - Digital Humanities 110
 
-As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would prove difficult for tech-averse users: Senior Assist and Anvayaa on the iOS App Store. Improving these apps could mean greater quality of life for our senior citizens, especially during these trying times. 
+As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would prove difficult for tech-averse users: Senior Assist and Anvayaa on the iOS App Store. Improving these apps by making the design user-centered for the elder demographic could mean greater accessibility and quality of life for them, especially during these trying times. 
 
 ## Severity Scale for Usability Problems
 This 1-3 scale can be used to rate the severity of usability problems within the apps. 
@@ -14,3 +14,39 @@ This 1-3 scale can be used to rate the severity of usability problems within the
 
 Credit: NNgroup - https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/
 
+
+Information about the competitor web/app 
+
+Provide the screenshot(s) of the web/app
+Provide the URL (clickable to launch the website)
+Provide brief information about the website
+Provide your overall evaluation of that website
+Heuristic evaluation (either by web_contents or by a downloadable document)
+
+Provide all 10 heuristics listed
+You need to review the websites with all 10 heuristics one by one, explain the heuristic in your own terms.
+Provide the detailed analysis of the web/app with the comments 
+The website may have no issue on that related heuristic you inspect - then, explain why you think the website is okay for your evaluation.
+If the website violates the related heuristic, you will explain why and suggest the source of that issue and possible solution.
+
+
+
+
+## Senior Assist
+https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
+
+Evaluation:
+
+Overall: 
+
+| Heuristic & Description | Evaluation | Suggested Improvement
+|--------|------------|-----------------|
+| 1      | Little to no issues, issues that arise are cosmetic |
+| 2      | Minor usability problem: fixing this should be given low priority |
+| 3      | Major usability problem: important to fix, so should be given high priority |
+
+
+
+
+## Anvayaa
+https://apps.apple.com/us/app/anvayaa/id1123534017
