--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -32,7 +32,7 @@ If the website violates the related heuristic, you will explain why and suggest 
 
 
 
-## Senior Assist
+## App #1: Senior Assist
 https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 
 Evaluation:
@@ -41,12 +41,13 @@ Overall:
 
 | Heuristic & Description | Evaluation | Suggested Improvement
 |--------|------------|-----------------|
-| 1      | Little to no issues, issues that arise are cosmetic |
+| #1: Visibility of system status
+The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | Little to no issues, issues that arise are cosmetic | blahlblahblah |
 | 2      | Minor usability problem: fixing this should be given low priority |
 | 3      | Major usability problem: important to fix, so should be given high priority |
 
+Heuristic & Definition Credit: https://www.nngroup.com/articles/ten-usability-heuristics/
 
 
-
-## Anvayaa
+## App #2: Anvayaa
 https://apps.apple.com/us/app/anvayaa/id1123534017
