--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -1,7 +1,7 @@
 # Senior Citizen Assistance Apps to Improve Quality of Life 
 ## Derek Wang - Digital Humanities 110
 
-As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would prove difficult for tech-averse users: Senior Assist and Anvayaa on the iOS App Store. Improving these apps by making the design user-centered for the elder demographic could mean greater accessibility and quality of life for them, especially during these trying times. 
+As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would prove difficult for tech-averse users: **Senior Assist Reminder & Learning** and **Anvayaa** on the iOS App Store. Improving these apps by making the design user-centered for the elder demographic could mean greater accessibility and quality of life for them, especially during these trying times. 
 
 ## Severity Scale for Usability Problems
 This 1-3 scale can be used to rate the severity of usability problems within the apps. 
@@ -32,17 +32,17 @@ If the website violates the related heuristic, you will explain why and suggest 
 
 
 
-## App #1: Senior Assist
+## App #1: Senior Assist Reminder & Learning
+[insert image]
 https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 
-Evaluation:
+**About:** Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
 
-Overall: 
+**Overall Evaluation:**
 
 | Heuristic & Description | Evaluation | Suggested Improvement
 |--------|------------|-----------------|
-| #1: Visibility of system status
-The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | Little to no issues, issues that arise are cosmetic | blahlblahblah |
+| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | (2):    | blahlblahblah |
 | 2      | Minor usability problem: fixing this should be given low priority |
 | 3      | Major usability problem: important to fix, so should be given high priority |
 
