--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -34,15 +34,19 @@ If the website violates the related heuristic, you will explain why and suggest 
 
 ## App #1: Senior Assist Reminder & Learning
 [insert image]
+
 https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 
 **About:** Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
 
-**Overall Evaluation:**
+**Overall Evaluation:** This app would be very difficult for senior citizens to use given that many things are ambiguous and cryptic.  
 
-| Heuristic & Description | Evaluation | Suggested Improvement
+app could benefit from a call-to-action that signifies the first step 
+
+| Heuristic & Description | Evaluation | Suggested Solution
 |--------|------------|-----------------|
-| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | (2):    | blahlblahblah |
+| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | (2):  
+(3):                        | blahlblahblah |
 | 2      | Minor usability problem: fixing this should be given low priority |
 | 3      | Major usability problem: important to fix, so should be given high priority |
 
