--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -45,8 +45,7 @@ app could benefit from a call-to-action that signifies the first step
 
 | Heuristic & Description | Evaluation | Suggested Solution
 |--------|------------|-----------------|
-| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | (2):  
-(3):                        | blahlblahblah |
+| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | (2):  <br /> (3):                        | blahlblahblah |
 | 2      | Minor usability problem: fixing this should be given low priority |
 | 3      | Major usability problem: important to fix, so should be given high priority |
 
