--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -37,9 +37,9 @@ If the website violates the related heuristic, you will explain why and suggest 
 
 https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 
-**About:** Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
-
-'Overall Evaluation:' This app would be very difficult for senior citizens to use given that many things are ambiguous and cryptic.  
+`About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
+ 
+`Overall Evaluation:` This app would be very difficult for senior citizens to use given that many things are ambiguous and cryptic.  
 
 app could benefit from a call-to-action that signifies the first step 
 
