--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -43,8 +43,8 @@ https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
-| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | `(2)` The page is very static. The user struggles where to start and struggles to understand where to first start typing. \n `(2)`:  There is no loading screen or initial tutorial to indicate the beginning. Upon opening the app, it jumps straight into the app's function without preface.       |  A cursor (blinking line to indicate where text appears) should be implemented in the "Title" field. Additionally, a quick loading screen (1 second) could help the user understand that the system has just start up and is ready to be used.  |
-| 2      | Minor usability problem: fixing this should be given low priority |
+| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | **(2)** The page is very static. The user struggles where to start and struggles to understand where to first start typing. **(2)**:  There is no loading screen or initial tutorial to indicate the beginning. Upon opening the app, it jumps straight into the app's function without preface.       |  A cursor (blinking line to indicate where text appears) should be implemented in the "Title" field. Additionally, a quick loading screen (1 second) could help the user understand that the system has just start up and is ready to be used.  |
+| **#2: Match between system and the real world:** The design should speak the users' language. Use words, phrases, and concepts familiar to the user, rather than internal jargon. Follow real-world conventions, making information appear in a natural and logical order.   | **(3)** The "Print Waiting ..." is not a natural phrase people see, so it can be confusing to some.  | Instead of "Print Waiting ...", the Print button should simply be labeled as "Print". |
 | 3      | Major usability problem: important to fix, so should be given high priority |
 
 Heuristic & Definition Credit: https://www.nngroup.com/articles/ten-usability-heuristics/
