--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -49,6 +49,7 @@ https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 | **#4: Consistency and standards:** Users should not have to wonder whether different words, situations, or actions mean the same thing. Follow platform and industry conventions.| **(3)** A lot of the icons are crpytic and some are even mislabeled. The first 2 icons on the navigation abar are nearly uninterpreatble, and the last icon is colloquially recognized as a Profile icon, but instead serves to show a tutorial. **(3)** The Picture/Profile Picture can be easily changed by tapping the icon (a rather large icon too). Users often accidentally hit this icon which opens up the camera app. | The icons should be properly selected and should fit the common standard. A profile icon sohuld lead to the profile section. As for the Picture/Profile Picture function, the ability to change it should be indicated by a small X on the upper left corner of the icon. The X is a clear indication to get rid/change the profile picture. This way users will not accidentally hit it andopen the camera. |
 | **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Either eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | **(1)** Feedback is provided when nothing is input. Users are instructed to fill in minimum information before printing the label. | No changes need to be made, other than cosmetic ones. There should be more white space between the heading and subheading. |
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | **(3)** The navigation bar changes frequently depending on which page the user is at. Getting onto a new page means learning the new navigation, which is very taxing on the user. Users have to actively learn how to use the app. | The navigation bar should be unchanging to reinforce recognition. Additionally, they should be labeled because they are necessary to efficient navigation in that users will not have to guess the meaning of the icon. |
+| **#7: Flexibility and efficiency of use:** Shortcuts — hidden from novice users — may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | **(2)** Additional options for export are tucked away in the 2nd icon in the navigation bar. Users that want to email or delete the label must first click on the tab and then actually perform the action. | Perhaps instead of a giant "Print" button, There can be four smaller buttons that can print, delete, save to Photos, and email. The 2nd icon in the navigation bar can be removed to reduce clutter. Alternatively, a better option would be to replace the "Print" with a general Export button, where users can then choose the subsequent action (print, delete, etc). |
 
 Heuristic Definition provided by https://www.nngroup.com/articles/ten-usability-heuristics/
 
