--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -9,8 +9,8 @@ This 1-3 scale can be used to rate the severity of usability problems within the
 | Rating | Importance |
 |--------|------------|
 | 1      | Little to no issues, issues that arise are cosmetic |
-| 2      | Minor usability problem: fixing this should be given low priority |
-| 3      | Major usability problem: important to fix, so should be given high priority |
+| 2      | Fixing this should be given low-medium priority |
+| 3      | Fixing this should be given medium-high priority |
 
 Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/
 
@@ -51,7 +51,8 @@ https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | **(3)** The navigation bar changes frequently depending on which page the user is at. Getting onto a new page means learning the new navigation, which is very taxing on the user. Users have to actively learn how to use the app. | The navigation bar should be unchanging to reinforce recognition. Additionally, they should be labeled because they are necessary to efficient navigation in that users will not have to guess the meaning of the icon. |
 | **#7: Flexibility and efficiency of use:** Shortcuts may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | **(2)** Additional options for export are tucked away in the 2nd icon in the navigation bar. Users that want to email or delete the label must first click on the tab and then actually perform the action. | Perhaps instead of a giant "Print" button, There can be four smaller buttons that can print, delete, save to Photos, and email. The 2nd icon in the navigation bar can be removed to reduce clutter. Alternatively, a better option would be to replace the "Print" with a general Export button, where users can then choose the subsequent action (print, delete, etc). | **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The layout is indeed minimal. However, some buttons in the navigation bar could be removed altogether. The "restart" and "export" button are taking up a lot of space. | The "restart" button should be a small X in the top left corner on the actual interface that users interact with for the functionality aspect. The export button can be moved to the actual interface as well, so that all functions are present and within proximity. |
 | **#9: Help users recognize, diagnose, and recover from errors** Error messages should be expressed in plain language, precisely indicate the problem, and constructively suggest a solution. | **(1)** Feedback is provided when nothing is input. Users are instructed to fill in minimum information before printing the label. | No changes need to be made, other than cosmetic ones. There should be more white space between the heading and subheading. |
-| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. |
+| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(3)** The only sort of help/documentation on this app is on the "profile" icon, which gives a brief, 5-step tutorial on how to use the app. The problem is that users would not know that this tutorial exists unless they experiment and try out every button until they hit the "profile" icon--the last icon on the navigation bar | The user |
+
 Heuristic Definition provided by https://www.nngroup.com/articles/ten-usability-heuristics/
 
 
