--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -33,7 +33,10 @@ If the website violates the related heuristic, you will explain why and suggest 
 
 
 ## App #1: Senior Assist Reminder & Learning
-[insert image]
+<p float="left">
+  <img src="/Images/Senior%20Assist%20Homepage.jpg" width="100" />
+  <img src="/Images/Senior%20Assist%20Print%20Function.jpg" width="100" /> 
+</p>
 
 https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521
 
