--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -33,7 +33,7 @@ If the website violates the related heuristic, you will explain why and suggest 
 
 
 ## App #1: Senior Assist Reminder & Learning
-<p float="left">
+<p float="middle">
   <img src="/Images/Senior%20Assist%20Homepage.jpg" width="400" />
   <img src="/Images/Senior%20Assist%20Print%20Function.jpg" width="400" /> 
 </p>
