--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -38,7 +38,9 @@ If the website violates the related heuristic, you will explain why and suggest 
   <img src="/Images/Senior%20Assist%20Print%20Function.jpg" width="400" /> 
 </p>
 
-<p align = "middle> `Appstore Link:` https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 </p>
+<p align = "middle"> 
+            https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
+</p>
 
 `About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
  
