--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -14,25 +14,8 @@ This 1-3 scale can be used to rate the severity of usability problems within the
 
 Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/
 
-
-Information about the competitor web/app 
-
-Provide the screenshot(s) of the web/app
-Provide the URL (clickable to launch the website)
-Provide brief information about the website
-Provide your overall evaluation of that website
-Heuristic evaluation (either by web_contents or by a downloadable document)
-
-Provide all 10 heuristics listed
-You need to review the websites with all 10 heuristics one by one, explain the heuristic in your own terms.
-Provide the detailed analysis of the web/app with the comments 
-The website may have no issue on that related heuristic you inspect - then, explain why you think the website is okay for your evaluation.
-If the website violates the related heuristic, you will explain why and suggest the source of that issue and possible solution.
-
-
-
-
-## App #1: Senior Assist Reminder & Learning
+## App #1:
+### Senior Assist Reminder & Learning
 <p align ="middle">
   <img src="/Images/Senior%20Assist%20Homepage.jpg" width="400" />
   <img src="/Images/Senior%20Assist%20Print%20Function.jpg" width="400" /> 
