--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -44,7 +44,8 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
 Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability-heuristics/
 
 
-## App #2: Anvayaa
+## App #2:
+### Anvayaa
 
 <p align ="middle">
   <img src="/Images/Anvayaa%20Homepage.PNG" width="600" />
