--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -49,7 +49,7 @@ Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability
 
 <p align ="middle">
   <img src="/Images/Anvayaa%20Homepage.PNG" width="600" />
-  <img src="Images/Anvayaa%20Profile%20Page.PNG" width="600" /> 
+  <img src="/Images/Anvayaa%20Profile%20Page.PNG" width="600" /> 
 </p>
 
 <p align = "middle"> 
