--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -16,6 +16,9 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
 
 ## App #1:
 ### Senior Assist Reminder & Learning
+
+`About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
+
 <p align ="middle">
   <img src="/Images/Senior%20Assist%20Homepage.jpg" width="400" />
   <img src="/Images/Senior%20Assist%20Print%20Function.jpg" width="400" /> 
@@ -25,9 +28,8 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
             Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
 </p>
 
-`About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
  
-`Overall Evaluation:` This app would be very difficult for senior citizens to use given that many things are ambiguous and cryptic, and was not designed with the senior citizen user in mind
+`Overall Evaluation:` This app would be very difficult for senior citizens to navigate given that many things are ambiguous and cryptic. This app contains poor choice of iconography and contains uncommon jargon that increase cognitive load. Users would be constantly frustrated by frequently opening the camera function on accident since the button is large and in the middle of the screen. Users would also be frustrated by the inability to undo an action--one page actually requires the user to restart the app to get back to homepage. Moreover, there are unnecessary animations and startling sounds that would confuse and even scare tech-averse users. This app requires major improvement.
 
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
@@ -47,6 +49,8 @@ Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability
 ## App #2:
 ### Anvayaa
 
+`About:` 
+
 <p align ="middle">
   <img src="/Images/Anvayaa%20Homepage.PNG" width="400" />
   <img src="/Images/Anvayaa%20Profile%20Page.PNG" width="400" /> 
@@ -56,8 +60,6 @@ Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability
             Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 </p>
 
-
-`About:` 
 
 `Overall Evaluation:`
 
