--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -4,7 +4,7 @@
 As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an accessible way to reintegrate themselves into society. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two apps that I believe could help the elderly, but suffer from a lot of shortcomings that would prove difficult for tech-averse users: **Senior Assist Reminder & Learning** and **Anvayaa** on the iOS App Store. Improving these apps by making the design user-centered for the elder demographic could mean greater accessibility and quality of life for them, especially during these trying times. 
 
 ## Severity Scale for Usability Problems
-This 1-3 scale can be used to rate the severity of usability problems within the apps. 
+This is the 1-3 scale that we will use to rate the severity of usability problems within the apps. 
 
 | Rating | Importance |
 |--------|------------|
