--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -28,6 +28,8 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
             Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
 </p>
 
+### Heuristic Evaluation
+
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
 | **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | **(2)** The page is very static. The user struggles where to start and struggles to understand where to first start typing. **(2)**:  There is no loading screen or initial tutorial to indicate the beginning. Upon opening the app, it jumps straight into the app's function without preface.       |  A cursor (blinking line to indicate where text appears) should be implemented in the "Title" field. Additionally, a quick loading screen (1 second) could help the user understand that the system has just start up and is ready to be used.  |
@@ -62,6 +64,8 @@ Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability
 
 
 `Overall Evaluation:`
+
+### Heuristic Evaluation
 
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
