--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -1,7 +1,7 @@
 # Senior Citizen Assistance Apps to Improve Quality of Life 
 ## Derek Wang - Digital Humanities 110
 
-As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an easy way to reintegrate themselves into the technology-centric world of today. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two similar apps on the iOS App Store that I believe could help the elderly: **Senior Assist Reminder & Learning** and **Anvayaa**. However, they suffer from a lot of shortcomings that would prove difficult for tech-averse users. Improving these apps by making the design user-centered for the elder demographic could mean greater accessibility and quality of life for them, especially during these trying times. 
+As a result of the COVID-19 Pandemic, people have had to adapt to the new status quo. However, an invisible, vulnerable population is often left out of the discourse: senior citizens. Senior citizens need an easy way to use technology to adapt to the isolating circumstances we face today. I believe that senior citizens would greatly benefit from an app that would help with daily activities, promote socialization, and counsel mental health. I found two similar apps on the iOS App Store that I believe could help the elderly: **Senior Assist Reminder & Learning** and **Anvayaa**. However, they suffer from a lot of shortcomings that would prove difficult for tech-averse users. Improving these apps by making the design user-centered for the elder demographic could mean greater accessibility and quality of life for them, especially during these trying times. 
 
 ## Severity Scale for Usability Problems
 This is the 1-3 scale that we will use to rate the severity of usability problems within the apps. 
