--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -28,7 +28,7 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
             Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
 </p>
 
-**Overall Evaluation:** This app would be very difficult for senior citizens to navigate given that many things are ambiguous and cryptic. This app contains poor choice of iconography and contains uncommon jargon that increase cognitive load. Users would be constantly frustrated by frequently opening the camera function on accident since the button is large and in the middle of the screen. Users would also be frustrated by the inability to undo an action--one page actually requires the user to restart the app to get back to homepage. Moreover, there are unnecessary animations and startling sounds that would confuse and even scare tech-averse users. This app requires major improvement.
+**Overall Evaluation:** This app would be very difficult for senior citizens to navigate given that many things are ambiguous and cryptic. This app contains poor choice of iconography and contains uncommon jargon like "Print Waiting ..." that increase cognitive load. Users would be constantly frustrated by frequently opening the camera function on accident since the button is large and in the middle of the screen. Users would also be frustrated by the inability to undo an action--one page actually requires the user to restart the app to get back to homepage. Moreover, there are unnecessary animations and startling sounds that would confuse and even scare tech-averse users. This app requires major improvement.
 
 
 ### Heuristic Evaluation
