--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -16,6 +16,7 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
 
 ## App #1:
 ### Senior Assist Reminder & Learning
+Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
 
 `About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
 
@@ -25,7 +26,7 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
 </p>
 
 <p align = "middle"> 
-            Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
+           Left: Senior Assist homepage, Right: Senior Assist export-to-print function.
 </p>
 
 **Overall Evaluation:** This app would be very difficult for senior citizens to navigate given that many things are ambiguous and cryptic. This app contains poor choice of iconography and contains uncommon jargon like "Print Waiting ..." that increase cognitive load. Users would be constantly frustrated by frequently opening the camera function on accident since the Upload Image button is large and in the middle of the screen. Users would also be frustrated by the inability to undo an action--one page actually requires the user to restart the app to get back to homepage. Moreover, there are unnecessary animations and startling sounds that would confuse and even scare tech-averse users. This app requires major improvement.
@@ -51,6 +52,7 @@ Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability
 
 ## App #2:
 ### Anvayaa
+Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 
 `About:` 
 
@@ -60,7 +62,7 @@ Heuristic Definitions provided by https://www.nngroup.com/articles/ten-usability
 </p>
 
 <p align = "middle"> 
-            Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
+            Left: Anvayaa Homepage, Right: Anvayaa Services
 </p>
 
 
