--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -62,7 +62,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 </p>
 
 <p align = "middle"> 
-            Left: Anvayaa Homepage, Right: Anvayaa Services
+            Left: Anvayaa Homepage, Right: Anvayaa Profile Page
 </p>
 
 
